--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,12 +24,13 @@
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        <p class="view"><a href="https://app.lokalise.com/api2docs/curl/">Lokalise APIv2 docs</a></p>
         {% endif %}
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        <nav>
+          {% include nav.html %}
+        </nav>
+
+        <p class="view"><a href="https://app.lokalise.com/api2docs/curl/">Lokalise APIv2 docs</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
