SRUBY-3 fix links [skip ci]

--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,7 +1,7 @@
 <ul>
 {% for item in site.data.api_items %}
   <li>
-    <a href="/api/{{ item.path }}">
+    <a href="api/{{ item.path }}">
       {{ item.title }}
     </a>
   </li>
