--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,7 +1,7 @@
 <ul>
 {% for item in site.data.api_items %}
   <li>
-    <a href="api/{{ item.path }}">
+    <a href="{{ 'api/' | append: item.path | absolute_url }} ">
       {{ item.title }}
     </a>
   </li>
