--- a/docs/_includes/nav_full_additional.html
+++ b/docs/_includes/nav_full_additional.html
@@ -1,13 +1,13 @@
 <ul>
 {% for item in site.data.additional_items %}
   <li>
-    <a href="additional_info/{{ item.path }}">
+    <a href="{{ site.baseurl }}/additional_info/{{ item.path }}">
       {{ item.title }}
     </a>
     <ul>
       {% for sub_item in item.sub_paths %}
         <li>
-          <a href="additional_info/{{ item.path }}#{{ sub_item.path }}">
+          <a href="{{ site.baseurl }}/additional_info/{{ item.path }}#{{ sub_item.path }}">
             {{ sub_item.title }}
           </a>
         </li>
