SRUBY-3 underline the current menu item

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -53,7 +53,7 @@ header nav.menu ul li span {
 
 header nav.menu ul li .active {
   font-weight: 600;
-  font-weight: 1.05rem;
+  text-decoration: underline;
 }
 
 header nav.menu ul li a:active {
