SRUBY-3 add line-height

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -53,6 +53,8 @@ header nav.menu ul li span {
 
 header nav.menu ul li .active {
   font-weight: 600;
+  padding-top: 6px;
+  line-height: 1;
 }
 
 header nav.menu ul li a:active {
