--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,6 +10,10 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/assets/android-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/assets/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/favicon-16x16.png">
   </head>
   <body>
     <div class="wrapper">
@@ -48,7 +52,7 @@
           <ul>
             <li><a href="https://app.lokalise.com/api2docs/curl/" target="_blank">Lokalise APIv2 docs</a></li>
             <li><a href="https://github.com/lokalise/php-lokalise-api" target="_blank">PHP API client</a></li>
-            <li><a href="https://github.com/lokalise/node-lokalise-api" target="_blank">Node.js API client</a></li>
+            <li><a href="https://lokalise.github.io/node-lokalise-api/" target="_blank">Node.js API client</a></li>
             <li><a href="https://github.com/lokalise/go-lokalise-api" target="_blank">Go API client</a></li>
             <li><a href="https://github.com/lokalise/python-lokalise-api" target="_blank">Python API client</a></li>
           </ul>
