use gha for jekyll [skip ci]

--- a/docs/_sass/_jekyll-theme-minimal.scss
+++ b/docs/_sass/_jekyll-theme-minimal.scss
@@ -67,7 +67,7 @@ blockquote {
 }
 
 code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
+  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, monospace;
   color:#333;
 }
 
