--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'FactorA-Medium', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  font-family: 'FactorA-Medium', system-ui, -apple-system, Segoe UI, Arial, sans-serif;
 }
 
 
