update links [skip ci]

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -61,8 +61,8 @@
           <li><a href="https://github.com/lokalise/php-lokalise-api" target="_blank">PHP API client</a></li>
           <li><a href="https://lokalise.github.io/node-lokalise-api/" target="_blank">Node.js API client</a></li>
           <li><a href="https://github.com/lokalise/go-lokalise-api" target="_blank">Go API client</a></li>
-          <li><a href="https://python-lokalise-api.readthedocs.io/" target="_blank">Python API client</a></li>
-          <li><a href="https://lokalise.github.io/elixir-lokalise-api" target="_blank">Elixir API client</a></li>
+          <li><a href="https://python-lokalise-api.readthedocs.io/en/latest/" target="_blank">Python API client</a></li>
+          <li><a href="https://lokalise.github.io/elixir-lokalise-api/" target="_blank">Elixir API client</a></li>
         </ul>
       </nav>
     </header>
